RMS-2495-alignment-issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,7 +120,9 @@ a {
   font-size: 16px;
   font-weight: bold;
 }
-
+.d-none {
+  display: none;
+}
 .activity p {
   font-size: 14px;
 }
@@ -260,32 +262,31 @@ td.MuiTableCell-body button p {
   font-size: 20px;
 }
 
-.PhoneInput{
-    padding: 4px 0 5px;
-    border: 0;
-    box-sizing: content-box;
-    background: none;
-    height: 0.4175em;
-    margin: 0;
-    -webkit-tap-highlight-color: transparent;
-    display: block;
-    min-width: 0;
-    -webkit-animation-name: mui-auto-fill-cancel;
-    animation-name: mui-auto-fill-cancel;
-    -webkit-animation-duration: 10ms;
-    animation-duration: 10ms;
-    padding: 16.5px ;
-        border-style: solid;
-          border-width: 1px;
-          overflow: hidden;
-          min-width: 0%;
-          border-color: rgba(0, 0, 0, 0.23);
-          border-radius: 8px;
-  
+.PhoneInput {
+  padding: 4px 0 5px;
+  border: 0;
+  box-sizing: content-box;
+  background: none;
+  height: 0.4175em;
+  margin: 0;
+  -webkit-tap-highlight-color: transparent;
+  display: block;
+  min-width: 0;
+  -webkit-animation-name: mui-auto-fill-cancel;
+  animation-name: mui-auto-fill-cancel;
+  -webkit-animation-duration: 10ms;
+  animation-duration: 10ms;
+  padding: 16.5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  min-width: 0%;
+  border-color: rgba(0, 0, 0, 0.23);
+  border-radius: 8px;
 }
 
 .PhoneInputInput {
-padding: 4px 0 5px;
+  padding: 4px 0 5px;
   border: 0;
   box-sizing: content-box;
   background: none;
